fix(styles): sidebar: overflow-y auto or bust

--- a/scout-style/sidebar.less
+++ b/scout-style/sidebar.less
@@ -32,7 +32,8 @@
     position: absolute;
     top: 72px;
     bottom: 180px;
-    overflow: scroll;
+    overflow-y: auto;
+    width: 100%;
 
     .list-group-item {
       cursor: pointer;
